package com.xixi.lab.dp.ox1_creational.ox1_02_factory_method.simple_factory.product;

public interface IProduct {
    /**
     * 描述产品内容
     */
    void desc();
}
