package com.xixi.lab.dp.ox1_creational.ox1_02_factory_method.simple_factory.product;

public class Laptop implements IProduct {
    @Override
    public void desc() {
        System.out.println("I am a laptop.");
    }
}
